Design profile view

--- a/Tweeter/Base.lproj/Main.storyboard
+++ b/Tweeter/Base.lproj/Main.storyboard
@@ -649,13 +649,118 @@
                     <view key="view" contentMode="scaleToFill" id="ZcY-cr-aiL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9ok-yX-3eQ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="191"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yiO-XT-QcP">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="9Kg-Lv-ED7"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TwitterLogo" translatesAutoresizingMaskIntoConstraints="NO" id="t9v-od-JDF">
+                                        <rect key="frame" x="8" y="35" width="48" height="48"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="48" id="3Jh-Zb-zrt"/>
+                                            <constraint firstAttribute="height" constant="48" id="k5C-ll-es4"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="William Huang" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssr-bq-R2p">
+                                        <rect key="frame" x="8" y="91" width="106" height="18"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@whuang8" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="viO-NF-wAd">
+                                        <rect key="frame" x="8" y="111" width="63" height="15"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My bio." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8S-wh-n0U">
+                                        <rect key="frame" x="8" y="134" width="42" height="15"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="163" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqe-UH-zbv">
+                                        <rect key="frame" x="8" y="157" width="22" height="14"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOLLOWING" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c04-iJ-VeY">
+                                        <rect key="frame" x="32" y="157" width="65" height="14"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="11"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="163" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e8W-dm-Dzb">
+                                        <rect key="frame" x="119" y="156" width="22" height="15"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOLLOWERS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipO-lL-RlV">
+                                        <rect key="frame" x="143" y="157" width="66" height="14"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="11"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="c04-iJ-VeY" firstAttribute="leading" secondItem="eqe-UH-zbv" secondAttribute="trailing" constant="2" id="5Bt-TP-BkO"/>
+                                    <constraint firstItem="M8S-wh-n0U" firstAttribute="top" secondItem="viO-NF-wAd" secondAttribute="bottom" constant="8" id="5w4-Ma-dpe"/>
+                                    <constraint firstItem="M8S-wh-n0U" firstAttribute="leading" secondItem="9ok-yX-3eQ" secondAttribute="leading" constant="8" id="67n-yc-zBd"/>
+                                    <constraint firstItem="ssr-bq-R2p" firstAttribute="top" secondItem="t9v-od-JDF" secondAttribute="bottom" constant="8" id="6O8-5W-sQy"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="e8W-dm-Dzb" secondAttribute="bottom" constant="10" id="6Ws-2W-CSv"/>
+                                    <constraint firstItem="viO-NF-wAd" firstAttribute="top" secondItem="ssr-bq-R2p" secondAttribute="bottom" constant="2" id="Cvt-ZQ-pPo"/>
+                                    <constraint firstAttribute="trailing" secondItem="yiO-XT-QcP" secondAttribute="trailing" id="E78-ag-4qf"/>
+                                    <constraint firstItem="c04-iJ-VeY" firstAttribute="top" secondItem="M8S-wh-n0U" secondAttribute="bottom" constant="8" id="Gnb-Ss-sqY"/>
+                                    <constraint firstItem="eqe-UH-zbv" firstAttribute="top" secondItem="M8S-wh-n0U" secondAttribute="bottom" constant="8" id="IZA-Km-QIi"/>
+                                    <constraint firstItem="e8W-dm-Dzb" firstAttribute="leading" secondItem="c04-iJ-VeY" secondAttribute="trailing" constant="22" id="LTA-oX-scL"/>
+                                    <constraint firstItem="eqe-UH-zbv" firstAttribute="leading" secondItem="9ok-yX-3eQ" secondAttribute="leading" constant="8" id="LUA-kh-hBH"/>
+                                    <constraint firstItem="e8W-dm-Dzb" firstAttribute="bottom" secondItem="c04-iJ-VeY" secondAttribute="bottom" id="Lui-Rn-Ixf"/>
+                                    <constraint firstAttribute="height" constant="191" id="Mnk-pu-iit"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="M8S-wh-n0U" secondAttribute="trailing" constant="8" id="QjA-5t-oDe"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ssr-bq-R2p" secondAttribute="trailing" constant="8" id="Rvo-cc-9aB"/>
+                                    <constraint firstItem="t9v-od-JDF" firstAttribute="leading" secondItem="9ok-yX-3eQ" secondAttribute="leading" constant="8" id="WKh-CZ-f3U"/>
+                                    <constraint firstItem="c04-iJ-VeY" firstAttribute="bottom" secondItem="eqe-UH-zbv" secondAttribute="bottom" id="kko-nX-16q"/>
+                                    <constraint firstItem="yiO-XT-QcP" firstAttribute="top" secondItem="9ok-yX-3eQ" secondAttribute="top" id="oBo-CY-IN9"/>
+                                    <constraint firstItem="ipO-lL-RlV" firstAttribute="bottom" secondItem="c04-iJ-VeY" secondAttribute="bottom" id="pko-IS-cPx"/>
+                                    <constraint firstItem="viO-NF-wAd" firstAttribute="leading" secondItem="9ok-yX-3eQ" secondAttribute="leading" constant="8" id="rKh-lu-DOO"/>
+                                    <constraint firstItem="yiO-XT-QcP" firstAttribute="leading" secondItem="9ok-yX-3eQ" secondAttribute="leading" id="u2C-Um-o8Y"/>
+                                    <constraint firstItem="ipO-lL-RlV" firstAttribute="bottom" secondItem="e8W-dm-Dzb" secondAttribute="bottom" id="uKQ-w1-pND"/>
+                                    <constraint firstItem="t9v-od-JDF" firstAttribute="top" secondItem="9ok-yX-3eQ" secondAttribute="top" constant="35" id="uZn-ND-Q7c"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="viO-NF-wAd" secondAttribute="trailing" constant="8" id="usn-zv-1qt"/>
+                                    <constraint firstItem="ssr-bq-R2p" firstAttribute="leading" secondItem="9ok-yX-3eQ" secondAttribute="leading" constant="8" id="vg5-H1-itH"/>
+                                    <constraint firstItem="ipO-lL-RlV" firstAttribute="leading" secondItem="e8W-dm-Dzb" secondAttribute="trailing" constant="2" id="xlM-oF-6IN"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9ok-yX-3eQ" firstAttribute="top" secondItem="hCj-7W-3Xm" secondAttribute="bottom" id="bze-TC-8QC"/>
+                            <constraint firstAttribute="trailing" secondItem="9ok-yX-3eQ" secondAttribute="trailing" id="c1b-kN-ael"/>
+                            <constraint firstItem="9ok-yX-3eQ" firstAttribute="leading" secondItem="ZcY-cr-aiL" secondAttribute="leading" id="z3X-hb-UZb"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Onq-PP-fwQ"/>
+                    <connections>
+                        <outlet property="bannerImageView" destination="yiO-XT-QcP" id="NvC-JY-csO"/>
+                        <outlet property="followersCountLabel" destination="e8W-dm-Dzb" id="FgM-C4-YdF"/>
+                        <outlet property="followingCountLabel" destination="eqe-UH-zbv" id="T9T-Wc-PIl"/>
+                        <outlet property="profilePictureImageView" destination="t9v-od-JDF" id="El0-Iu-kHf"/>
+                        <outlet property="userBioLabel" destination="M8S-wh-n0U" id="7bz-Jy-kIi"/>
+                        <outlet property="userHandleLabel" destination="viO-NF-wAd" id="36e-2t-yNs"/>
+                        <outlet property="userNameLabel" destination="ssr-bq-R2p" id="Jgk-84-oec"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dbc-ID-5Kr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1566" y="1612"/>
+            <point key="canvasLocation" x="1565.5999999999999" y="1611.5442278860571"/>
         </scene>
         <!--Me-->
         <scene sceneID="UUR-qj-xwT">
